add getProjectByIDUseCase
